# Numera-

./: INSTALL_CORE_PLATFORM_V0_2.md  INSTALL_CORE_PLATFORM_V0_3.md  INSTALL_CORE_PLATFORM_V0_4.md  INSTALL_CORE_PLATFORM_V0_5.md  INSTALL_FORGE_V1.md  README.md  README_ACCOUNTING_DOMAIN_V0_7.md  README_DOCUMENT_TO_ACCOUNTING_V0_8.md  README_INVOICE_NUMBER_V0_9.md
backend/: README_CHART_OF_ACCOUNTS_V1.md  README_JOURNAL_ENGINE_V1.md  README_LEDGER_ENGINE_V1.md  numera.db  pyproject.toml
backend/demo/: README.md  purchase_demo.py
backend/src/numera/: main.py
backend/src/numera/api/: serializers.py
backend/src/numera/api/routes/: accounts.py  cognitive.py  companies.py  documents.py  (+5 more)
backend/src/numera/core/: config.py
backend/src/numera/domain/: __init__.py  accounting_mapper.py  cognitive_service.py  document_service.py  schemas.py
backend/src/numera/infrastructure/: repositories.py
backend/src/numera_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_accounting_domain.py  test_accounting_engine.py  test_accounting_mapper.py  test_business_event_engine.py  test_business_event_repository.py  test_chart_of_accounts.py  test_cognitive.py  test_health.py  test_invoice_number_extraction.py  test_journal_repository.py  test_ledger_engine.py  test_master_data_engine.py  test_money.py  test_purchase.py
backend/tests/business/: README.md  __init__.py  test_purchase_flow.py
backend/tests/business/fixtures/: invoice_amazon.json  supplier_amazon.json
docs/backend/: pyproject.toml
docs/backend/src/numera/: main.py
(+76 files in other folders)
