[project]
name = "numera-backend"
version = "0.5.0"
description = "Numera Core Platform backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "ruff>=0.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
